--- a/Hamburger.UI/project.json
+++ b/Hamburger.UI/project.json
@@ -1,9 +1,9 @@
 ﻿{
   "dependencies": {
-    "ColorPicker": "1.0.2",
     "Esri.ArcGISRuntime": "10.2.7.1234",
     "Esri.ArcGISRuntime.Toolkit": "10.2.7.1234",
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0"
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0",
+    "Prism.Core": "6.1.0"
   },
   "frameworks": {
     "uap10.0": {}
