--- a/Hamburger.UI/Hamburger.UI.csproj
+++ b/Hamburger.UI/Hamburger.UI.csproj
@@ -104,6 +104,7 @@
     <Compile Include="Models\GraphicHelpers\GraphicSelection.cs" />
     <Compile Include="Models\GraphicHelpers\SceneDrawHelper.cs" />
     <Compile Include="Models\GraphicHelpers\SceneEditHelper.cs" />
+    <Compile Include="PdfLoadedDocument.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Views\ColorPicker.xaml.cs">
       <DependentUpon>ColorPicker.xaml</DependentUpon>
